--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,9 +1,38 @@
-label.firstname=First Name
-label.lastname=Last Name
-label.email=Email
-label.telephone=Telephone
-label.add=Add Employee
- 
-label.menu=Actions
-label.title=Employee Form
-label.footer=&copy; www.HowToDoInJava.com
+Size.user.username = Username must be between 8 and 15 characters long.
+NotBlank.user.username = Username cannot be blank.
+Pattern.user.username = Username can only consist of numbers, letters and the underscore character.
+DuplicateKey.user.username = This username already exists!!!!
+NotBlank.user.password = Password cannot be blank.
+Pattern.user.password = Password cannot contain spaces.
+Size.user.password = Password must be between 8 and 15 characters long.
+Email.user.email = This does not appear to be a valid email address.
+UnmatchedPasswords.user.password = Passwords do not match.
+MatchedPasswords.user.password = Passwords match.
+NotBlank.user.name=Please enter your name.
+Size.user.name=Name must be between 8 and 60 characters.
+
+Size.book.text = Text must be between 20 and 255 characters.
+
+#application defined error messsages
+username.required=Username is required
+name.required=Name is required
+email.required=User email required
+password.required=Password can not be blank
+
+label.genre=Genre
+label.author=Author
+label.title=Title
+
+genre.sifi=Science fiction
+genre.drama=Drama
+genre.romance=Romance
+genre.mystery=Mystery
+genre.health=Health
+genre.child=Children's
+genre.religion=Religion
+genre.science=Science
+genre.history=History
+genre.poetry=Poetry
+genre.cook=Cookbooks
+genre.bio=Biographies
+genre.fantasy=Fantasy
