start add search book's engine

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,6 +22,7 @@ password.required=Password can not be blank
 label.genre=Genre
 label.author=Author
 label.title=Title
+label.desc=Description
 
 genre.sifi=Science fiction
 genre.drama=Drama
