--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -22,6 +22,7 @@ password.required=Password can not be blank
 label.genre=Жанр
 label.author=Автор
 label.title=Заглавие
+label.desc=Описание
 
 genre.sifi=Фантастика
 genre.drama=Драма
